完成成果部分的消息通知